0.5.3
  Added another slab recipe
  Fixed barrel recipe
  Wrath forges will only burn what's directly adjacent to the flame, making them 433% cooler.
  Changed charge propagation. Long distances should work now.

0.5.0 -- Electrically Charged!
  Ported to Minecraft 1.3!
  Due to concurrency & laziness issues, the client will dynamically pick an additional block ID if possible. The block will be used only for rendering. I don't anticipate it causing problems with other mods. If you've somehow managed to use up all 4096 or so other block IDs, the real Factorization block will be used instead; this would cause occasional rendering glitches when using the integrated server.
  The pocket crafting table & bag of holding now respond to key presses only if they are not otherwise handled. BWAH-HA-HA-HA-HA!
  The barrel renders blocks much nicer now.
  Wrath lamp recipe is now 4 dark iron & 2 silver.
  Removed sentry demons chunk-loaders due to lack of confidence in their correctness. And also laziness. Use ChickenBone's chunkloaders instead. They may return with a change in job description.
  Wrath Forges are now more expensive to operate.
  A few bug fixes for the Router GUI, and the auto-ejector.
  Slots.
  Nerfed wrathforge. It's no longer refuelable, and will last for 36 blocks
  Silver ore nodes are now evenly distributed in every 5 chunks
  Created a recipe for stone slabs

  More Electricity:
    The battery block is made using acid & lead. When crafted, it will be fully charged. They do not stack. Battery blocks keep their charge when broken. They are used to craft magnets, which are used in motors. A battery block can't charge another battery block.
    The Grinder is the first step of the ore processing chain. A second use for diamond shards!
    Also there is the Mixer, which is used for water-based recipes